# battery-rag-agent

./: .env.example  .env.production.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  agent.py  auth.py  chat.py  documents.py  experiments.py  external_references.py  knowledge_base.py  projects.py  system.py  writing.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  agent_task.py  chat_message.py  chat_session.py  document.py  document_chunk.py  experiment_dataset.py  experiment_output.py  external_reference.py  project.py  user.py  writing_artifact.py
backend/app/schemas/: __init__.py  agent.py  auth.py  chat.py  document.py  experiment.py  external_reference.py  project.py  writing.py
backend/app/services/: agent_framework.py  experiments.py  external_references.py  ingestion.py  llm_gateway.py  rag.py  storage.py  vector_store.py  writing.py
backend/tests/: conftest.py  test_agent_framework.py  test_auth_and_projects.py  test_document_ingestion.py  test_documents.py  test_experiment_analysis.py  test_external_references.py  test_rag_chat.py  test_writing_api.py
docs/: deployment-public-beta.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  (+1 more)
nginx/: default.conf
scripts/: deploy-prod.sh
(+121 files in other folders)
