[project]
name = "battery-rag-agent-backend"
version = "0.1.0"
description = "FastAPI shell for the Battery-RAG Agent bootstrap."
requires-python = ">=3.13"
dependencies = [
  "bcrypt==4.3.0",
  "email-validator==2.2.0",
  "fastapi==0.115.12",
  "httpx==0.28.1",
  "PyJWT==2.10.1",
  "pypdf==5.5.0",
  "python-multipart==0.0.20",
  "python-dotenv==1.1.1",
  "psycopg[binary]==3.2.10",
  "sqlalchemy==2.0.40",
  "uvicorn[standard]==0.34.2",
]

[dependency-groups]
dev = [
  "pytest==8.3.5",
]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_basetemp"

[tool.uv]
package = false
